# streamcraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
examples/: interface.html  pipeline_builder_demo.py  streaming_server.py
streamcraft/: __init__.py  devices.py  pipeline.py  webrtc.py
tests/: conftest.py  helpers.py  test_devices.py  test_pipeline.py  test_webrtc.py
